fix proxy alignment

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -160,11 +160,3 @@ html {
     height: 25px;
   }
 }
-
-.omnibox {
-  margin: 0;
-
-  ::placeholder {
-    font-weight: 600;
-  }
-}
